# localstack-bb

./: .gitignore  Makefile  README.md  SPEC.md  SPEC_FINAL.md  SPEC_LATEST.md  cpad  plux.ini  pyproject.toml  requirements-runtime.txt
localstack-core/localstack/: config.py  constants.py  deprecations.py  plugins.py  version.py
localstack-core/localstack/aws/: accounts.py  app.py  catalog_exceptions.py  client.py  connect.py  forwarder.py  mocking.py  patches.py  skeleton.py  spec.py
localstack-core/localstack/aws/api/: core.py
localstack-core/localstack/aws/api/transfer/: __init__.py
localstack-core/localstack/aws/handlers/: __init__.py  auth.py  codec.py  cors.py  fallback.py  internal.py  internal_requests.py  legacy.py  logging.py  metric_handler.py  presigned_url.py  proxy.py  region.py  response.py  service.py  service_plugin.py  validation.py
localstack-core/localstack/aws/protocol/: op_router.py  parser.py  routing.py  serializer.py  service_router.py  validate.py
localstack-core/localstack/aws/serving/: edge.py  hypercorn.py  twisted.py  werkzeug.py
localstack-core/localstack/extensions/patterns/: webapp.py
localstack-core/localstack/http/: duplex_socket.py  hypercorn.py  trace.py
localstack-core/localstack/logging/: format.py  setup.py
localstack-core/localstack/runtime/: analytics.py  hooks.py  init.py  main.py  runtime.py
localstack-core/localstack/runtime/server/: twisted.py
localstack-core/localstack/services/: edge.py  internal.py  plugins.py  providers.py  stores.py
localstack-core/localstack/services/transfer/: models.py  provider.py
localstack-core/localstack/testing/: config.py
localstack-core/localstack/testing/aws/: asf_utils.py  util.py
localstack-core/localstack/testing/pytest/: detect_thread_leakage.py  filters.py  find_orphaned_snapshots.py  fixture_conflicts.py  fixtures.py  in_memory_localstack.py  marker_report.py  marking.py  validation_tracking.py
localstack-core/localstack/testing/snapshots/: transformer_utility.py
localstack-core/localstack/utils/: archives.py  asyncio.py  auth.py  backoff.py  batching.py  bootstrap.py  checksum.py  collections.py  common.py  crypto.py  files.py  functions.py  http.py  json.py  net.py  openapi.py  patch.py  run.py  ssl.py  strings.py  sync.py  testutil.py  threads.py  time.py  venv.py
localstack-core/localstack/utils/analytics/: metadata.py
localstack-core/localstack/utils/aws/: arns.py  aws_stack.py  client.py  client_types.py  request_context.py
localstack-core/localstack/utils/catalog/: catalog.py
scripts/: generate_aws_credentials.sh
tests/: conftest.py
tests/aws/: conftest.py
tests/aws/services/transfer/: test_transfer.py  test_transfer.snapshot.json  test_transfer.validation.json
