# LocalStack project configuration
[build-system]
requires = ['setuptools>=64', 'wheel', 'setuptools_scm>=8.1']
build-backend = "setuptools.build_meta"

[project]
name = "localstack-core"
authors = [
    { name = "LocalStack Contributors", email = "info@localstack.cloud" }
]
description = "Minimal host-mode-runnable framework skeleton of LocalStack"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "asn1crypto>=1.5.1",
    "click>=8.2.0",
    "cachetools>=5.0",
    "cryptography",
    "dnslib>=0.9.10",
    "dnspython>=1.16.0",
    "plux>=1.14.0",
    "psutil>=5.4.8",
    "python-dotenv>=0.19.1",
    "pyyaml>=5.1",
    "rich>=12.3.0",
    "requests>=2.20.0",
    "semver>=2.10",
]
dynamic = ["version", "entry-points"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Emulators",
]

[tool.setuptools_scm]
version_file = "localstack-core/localstack/version.py"
# pypi does not support local versions:
# https://setuptools-scm.readthedocs.io/en/latest/usage/#default-versioning-scheme
local_scheme = "no-local-version"

[project.urls]
Homepage = "https://localstack.cloud"
Documentation = "https://docs.localstack.cloud"
Repository = "https://github.com/localstack/localstack.git"
Issues = "https://github.com/localstack/localstack/issues"

[project.optional-dependencies]
# minimal required to actually run localstack on the host for services natively implemented in python
base-runtime = [
    # pinned / updated by ASF update action
    "boto3==1.42.59",
    # pinned / updated by ASF update action
    "botocore==1.42.59",
    # transitive dependency of botocore, added to avoid specific version
    "awscrt>=0.13.14,!=0.27.1",
    "cbor2>=5.5.0",
    "dill==0.3.6",
    "dnspython>=1.16.0",
    "jsonpatch>=1.24",
    "jsonpointer>=3.0.0",
    "jsonschema>=4.25.1",
    "hypercorn>=0.14.4",
    "localstack-twisted>=25.0",
    "openapi-core>=0.19.2",
    "pydantic>=2.11.9",
    "pyopenssl>=23.0.0",
    "python-dateutil>=2.9.0",
    "readerwriterlock>=1.0.7",
    "requests-aws4auth>=1.0",
    # explicitly set urllib3 to force its usage / ensure compatibility
    "urllib3>=2.0.7",
    "Werkzeug>=3.1.3",
    "xmltodict>=0.13.0",
    "rolo>=0.8.1",
]

# required to actually run localstack on the host
runtime = [
    "localstack-core[base-runtime]",
    "cryptography>=41.0.5",
    "jinja2>=3.1.6",
    "moto-ext[all]>=5.1.22",
    "pyopenssl>=23.0.0",
    # removed: antlr4-python3-runtime — Step Functions ASL parser (deleted); still a moto-ext transitive dep
    # removed: apispec — no references in retained code
    # removed: aws-sam-translator — CloudFormation SAM transform (deleted); still a moto-ext transitive dep via cfn-lint
    # removed: crontab — no references in retained code
    # removed: jpype1 — Step Functions JSONata engine (deleted)
    # removed: jsonpath-ng — only used by testing/pytest/stepfunctions/utils.py (service-specific test helper)
    # removed: kclpy-ext — Kinesis consumer library (deleted with service)
    # removed: opensearch-py — OpenSearch provider (deleted); no framework references
    # removed: pymongo — no references in retained code
    # removed: responses — no references in retained code; still a moto-ext transitive dep
]

# for running tests and coverage analysis
test = [
    # runtime dependencies are required for running the tests
    "localstack-core[runtime]",
    "coverage[toml]>=5.5",
    "pluggy>=1.3.0",
    "pytest>=7.4.2",
    "pytest-httpserver>=1.1.2",
    "localstack-snapshot>=0.1.1",
]

# for developing localstack
dev = [
    # test dependencies are required for developing localstack
    "localstack-core[test]",
    "deptry>=0.13.0",
    "ruff>=0.3.3",
    "mypy",
]

# not strictly necessary for development, but provides type hint support for a better developer experience
typehint = [
    # typehint is an optional extension of the dev dependencies
    "localstack-core[dev]",
    # pinned / updated by ASF update action
    "boto3-stubs[iam,kms,s3,sns,sqs,sts,transfer]",
]

[tool.setuptools]
include-package-data = false
# TODO using this is discouraged by setuptools, `project.scripts` should be used instead
# However, `project.scripts` does not support non-python scripts.
script-files = []
package-dir = { "" = "localstack-core" }

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }
entry-points = { file = ["plux.ini"] }

[tool.setuptools.packages.find]
where = ["localstack-core/"]
include = ["localstack*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = [
    "*.md",
    "Makefile",
]
"localstack" = [
    "aws/**/*.json",
    "openapi.yaml",
    "http/resources/swagger/templates/index.html"
]

[tool.ruff]
# Generate code compatible with version defined in .python-version
target-version = "py313"
line-length = 100
src = ["localstack-core", "tests"]
exclude = [
    ".venv*",
    "venv*",
    "dist",
    "build",
    "target",
    "*.egg-info",
    "localstack-core/*.egg-info",
    ".filesystem",
    "localstack-core/.filesystem",
    ".git",
]

[tool.ruff.per-file-target-version]
# Only allow minimum version for code used in the CLI
"localstack-core/localstack/cli/**" = "py310"
"localstack-core/localstack/config.py" = "py310"
"localstack-core/localstack/constants.py" = "py310"
"localstack-core/localstack/utils/**" = "py310"  # imported by CLI tests
"localstack-core/localstack/testing/pytest/**" = "py310" # imported by CLI tests
"localstack-core/localstack/aws/connect.py" = "py310" # imported by CLI tests

[tool.deptry]
extend_exclude = [
    "localstack-core/localstack/testing/**", # utilities for testing
    "localstack-core/localstack/aws/mocking.py", # not used at runtime
    "localstack-core/localstack/aws/scaffold.py", # not used at runtime
]
pep621_dev_dependency_groups = ["dev", "typehint", "test"]

[tool.deptry.package_module_name_map]
"localstack-core" = ["localstack"]

[tool.deptry.per_rule_ignores]
DEP002 = [
    "awscrt", # defined to ignore a specific version - TODO evaluate and clean up
]

[tool.ruff.lint]
ignore = [
    "B007", # TODO Loop control variable x not used within loop body
    "B019", # TODO Use of `functools.lru_cache` or `functools.cache` on methods can lead to memory leaks
    "B022", # TODO No arguments passed to `contextlib.suppress`. No exceptions will be suppressed and therefore this context manager is redundant
    "B023", # TODO Function definition does not bind loop variable `server`
    "B024", # TODO x is an abstract base class, but it has no abstract methods
    "B027", # TODO `Server.do_shutdown` is an empty method in an abstract base class, but has no abstract decorator
    "B904", # TODO Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
    "C901", # TODO function is too complex
    "E402", # TODO Module level import not at top of file
    "E501", # E501 Line too long - handled by black, see https://docs.astral.sh/ruff/faq/#is-ruff-compatible-with-black
    "T201", # TODO `print` found
    "T203", # TODO `pprint` found
]
select = ["B", "C", "E", "F", "I", "W", "T", "B9", "G", "UP"]
extend-safe-fixes = [
    "UP006", # unsafe-fix for py39
    "UP035", # unsafe-fix for py39
]

# The rules below fill fix the code in a way that leaves multiple unused imports.
# Since F401 (removing unused imports) is currently an unsafe fix, these imports cannot be automatically removed.
# Therefore, we temporarily disable the rules below for __init__ files.
[tool.ruff.lint.per-file-ignores]

[tool.ruff.lint.pyupgrade]
# Avoid PEP 604 rewrites (e.g. Union[str, int] -> str | int), even with the `from __future__ import annotations`
# import. It only affects py39 and can be removed after we drop it.
keep-runtime-typing = true

[tool.coverage.run]
relative_files = true
source = [
    "localstack",
]
omit = [
    "*/aws/api/*",
    "*/extensions/api/*",
    "*/services/stepfunctions/asl/antlr/runtime/*"
]
dynamic_context = "test_function"

[tool.coverage.paths]
source = [
    "localstack-core"
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "raise NotImplemented.",
    "return NotImplemented",
    "def __repr__",
]

[tool.pytest.ini_options]
log_cli = false
log_level = "DEBUG"
log_cli_format = "%(asctime)s.%(msecs)03d %(levelname)5s --- [%(threadName)12s] %(name)-26s : %(message)s"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S"

[tool.pip-tools]
# adding localstack-core itself here because it is referenced in the pyproject.toml for stacking the extras
# pip, setuptools, and distribute are pip-tools defaults which need to be set again here
unsafe-package = ["localstack-core", "pip", "setuptools", "distribute"] # packages that should not be pinned

[tool.plux]
entrypoint_build_mode = "manual"
